# AIReview

./: .gitignore  .reviewrules  README.md
aireview/: Dockerfile  README.md  justfile  pyproject.toml
aireview/src/aireview/: config.py  main.py
aireview/src/aireview/application/controllers/: package.json  review_controller.py
aireview/src/aireview/application/dto/: review_dto.py
aireview/src/aireview/domain/: assistant.py
aireview/src/aireview/domain/entities/: llm_model.py  pull_request.py  pull_request_file.py  review.py  review_comment.py
aireview/src/aireview/domain/repositories/: review_repository.py
aireview/src/aireview/domain/services/: code_analyzer.py  review_service.py
aireview/src/aireview/infrastructure/: dust_client.py  github_client.py  llm_client.py  package.json
aireview/src/aireview/interfaces/: az_devops.py  client.py  github.py
aireview/src/aireview/prefect/deploy/: login.py  manage_block.py  manage_flow.py
aireview/src/aireview/prefect/flows/: review_pull_request.py
aireview/src/aireview/utils/: extract_json.py  load_file.py
aireview/tests/services/: send_message.py
aireview/tests/unit/: test_code_analyser.py  test_extract_json.py
